--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.probuilder": "4.0.5",
     "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.quicksearch": "1.4.1",
+    "com.unity.render-pipelines.high-definition": "6.9.2-preview",
     "com.unity.shadergraph": "6.9.2",
     "com.unity.test-framework": "1.0.18",
     "com.unity.textmeshpro": "2.0.1",
