removing not needed files step 1

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-Assets/UnityBuildSettings/UnityBuildSettings.asset
+Assets/UnityBuildSettings
+Assets/UnityBuildSettings.meta
 Assets/Plugins/UnityBuild
 Assets/Plugins/UnityBuild.meta
 Assets/Plugins/UnityBuild-ZipFile
