Fixed singleton call by actually implementing it

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ Assets/Plugins/UnityBuild
 Assets/Plugins/UnityBuild.meta
 Assets/Plugins/UnityBuild-ZipFile
 Assets/Plugins/UnityBuild-ZipFile.meta
+ProjectSettings/EditorBuildSettings.asset
